Changes from 0.2 to 0.3:

- main page called Main Page and not MainPage
- more Wiki functions
- conditional directives #IF and #IFEMPTY
- UI header and footer can be changed in Wiki
  including CSS and JS files
- code split to core and extensions
- install/upgrade script
- XML export/import
- ... and more

Changes from 0.1 to 0.2:

- new directory structure
- compatibility with MySQL-4.1.x
- directive #TITLE
- simple forms support
- horizontal rule Wiki markup ('---')
- Table of Contents and #NOTOC directive
- page inclusion
- Wiki functions support
- Wiki variables
- user_info Wiki function
- configurable anonymous access
- configurable non-admin edits
- allow fragments in internal links
- edit preview
- file uploads
- allow linking to specific revision
- ... and more
