@@ -37,11 +37,11 @@
 <key name="content">#PAGE
 #HEADER
 #META title {{$title}}
-#IF {{&amp;exists|data/mw/default.css}}
-#META stylesheet [[data/mw/default.css]]
+#IF {{&amp;exists|data/mw/layout/default.css}}
+#META stylesheet [[data/mw/layout/default.css]]
 #ENDIF
-#IF {{&amp;exists|data/mw/functions.js}}
-#META javascript [[data/mw/functions.js]]
+#IF {{&amp;exists|data/mw/layout/functions.js}}
+#META javascript [[data/mw/layout/functions.js]]
 #ENDIF
 #ENDHEADER
 
@@ -74,22 +74,22 @@
 <key name="revision">1</key>
 <key name="name">MW:Layout:ShowAction</key>
 </resource>
-<resource dataspace="uploads" name="mw/default.css">
+<resource dataspace="uploads" name="mw/layout/default.css">
 <key name="content">LyogJElkOiBkZWZhdWx0LmNzcyA0IDIwMDUtMDktMDIgMjE6NDc6MTVaIHNyYyAkCiAqIChjKTIwMDUgU3RlcGFuIFJvaCA8c3JjQHNybmV0LmN6PgogKiBGcmVlIHRvIGNvcHksIGZyZWUgdG8gbW9kaWZ5LCBOTyBXQVJSQU5UWQogKi8KCmgxIHsKICBmb250LXZhcmlhbnQ6IHNtYWxsLWNhcHMKfQphIHsKfQphOmxpbmsgewogIGNvbG9yOiAjMDAyYmI4CiAgdGV4dC1kZWNvcmF0aW9uOiB1bmRlcmxpbmUKfQphOnZpc2l0ZWQgewogIGNvbG9yOiAjNWEzNjk2Owp9CmE6aG92ZXIgewp9CmE6YWN0aXZlIHsKICBjb2xvcjogI0VFOUEwMAp9CmEuZWRpdC1saW5rIHsKICBjb2xvcjogcmVkCn0KcHJlIHsKICBib3JkZXI6IDFweCBzb2xpZDsKICBwYWRkaW5nOiAxZW07CiAgYmFja2dyb3VuZC1jb2xvcjogI0QzRDNEMzsKfQoqLmZvb3RlciB7CiAgYmFja2dyb3VuZC1jb2xvcjogeWVsbG93OwogIGZvbnQtZmFtaWx5OiBtb25vc3BhY2UKfQoqLmZvb3RlciBhIHsKICBjb2xvcjogYmx1ZQp9CioucGFnZS1lZGl0IHRleHRhcmVhIHsKICBtYXJnaW46IDFlbSAwCn0KKi5oaXN0b3J5IGxpIHsKICBsaXN0LXN0eWxlOiBub25lCn0KKi5oaXN0b3J5ICouaGlzdG9yeS1tZXNzYWdlIHsKICBmb250LXN0eWxlOiBvYmxpcXVlOwogIGNvbG9yOiAjOTE5MTkxCn0KKi5oaXN0b3J5ICouaGlzdG9yeS1jb250ZW50LWxlbmd0aCB7CiAgZm9udC1mYW1pbHk6IG1vbm9zcGFjZTsKICBjb2xvcjogIzkxOTE5MQp9CiouaGlzdG9yeSAqLmhpc3RvcnktdXNlciB7CiAgY29sb3I6ICM5MTkxOTEKfQoqLmluZm8tdGV4dCB7CiAgY29sb3I6IHJlZDsKICBib3JkZXItYm90dG9tOiAxcHggZG90dGVkIGJsYWNrOwp9CmJvZHkgaDEgewogIG1hcmdpbjogMDsKICBib3JkZXItYm90dG9tOiAxcHggZG90dGVkCn0KKi5zcGVjaWFsLXBhZ2VzIGxpIHsKICBsaXN0LXN0eWxlOiBub25lCn0KKi5zcGVjaWFsLXVzZXJzIGxpIHsKICBsaXN0LXN0eWxlOiBub25lCn0KZm9ybS5kZWxldGUtdXNlciB7CiAgZGlzcGxheTogaW5saW5lCn0KKi5saW5rLWxpa2UgewogIHRleHQtZGVjb3JhdGlvbjogdW5kZXJsaW5lCn0KKi5wcmUtbGlrZSB7CiAgZm9udC1mYW1pbHk6IG1vbm9zcGFjZQp9CioubGlzdC1saWtlIHsKICBkaXNwbGF5OiBsaXN0LWl0ZW07CiAgLyogd29ya2Fyb3VuZCBmb3IgTW96aWxsYSBGaXJlZm94IChlbHNlIHRoZSBsaXN0IGJ1bGxldCBpcyBwYXJ0aWFsbHkgaGlkZGVuKSAqLwogIG1hcmdpbjogMCAwIDAgMWVtOwp9CioudG9jIHsKICBib3JkZXI6IDFweCBzb2xpZDsKICBtYXJnaW46IDFlbTsKICBiYWNrZ3JvdW5kLWNvbG9yOiAjRDBEMEQwOwogIGZvbnQtc2l6ZTogeC1zbWFsbDsKfQoqLnRvYyB1bCBsaSB7CiAgbGlzdC1zdHlsZTogbm9uZTsKfQoqLnRvYy1sZXZlbC0yIHsKICBtYXJnaW46IDAgMCAwIDJlbTsKfQoqLnRvYy1sZXZlbC0zIHsKICBtYXJnaW46IDAgMCAwIDRlbTsKfQoqLnRvYy1sZXZlbC00IHsKICBtYXJnaW46IDAgMCAwIDZlbTsKfQoqLnRvYy1sZXZlbC01IHsKICBtYXJnaW46IDAgMCAwIDhlbTsKfQppbWcgewogIGJvcmRlcjogMDsKfQo=</key>
 <key name="length">1559</key>
 <key name="last_modified">20060624T122438Z</key>
 <key name="message">miniWiki default</key>
 <key name="author">admin</key>
 <key name="revision">1</key>
-<key name="name">mw/default.css</key>
+<key name="name">mw/layout/default.css</key>
 </resource>
-<resource dataspace="uploads" name="mw/functions.js">
+<resource dataspace="uploads" name="mw/layout/functions.js">
 <key name="content">LyogJElkOiBmdW5jdGlvbnMuanMgNCAyMDA1LTA5LTAyIDIxOjQ3OjE1WiBzcmMgJAogKiAoYykyMDA1IFN0ZXBhbiBSb2ggPHNyY0Bzcm5ldC5jej4KICogRnJlZSB0byBjb3B5LCBmcmVlIHRvIG1vZGlmeSwgTk8gV0FSUkFOVFkKICovCgovKgogKiBhZGRzIGdpdmVuIHRleHQgdG8gdGV4dGFyZWEgdG8gY3VycmVudCBjdXJzb3IgcG9zaXRpb24KICogaWYgdGV4dCBjb250YWlucyAlIGN1cnNvciB3aWxsIGJlIHBvc2l0aW9uZWQgdGhlcmUgYWZ0ZXIgYWRkCiAqIGlkOiB0ZXh0YXJlYSBJRAogKiB0ZXh0OiB0ZXh0IHRvIGFkZAogKi8KZnVuY3Rpb24gYWRkX3RvX3RleHRhcmVhKGlkLCB0ZXh0KSB7CiAgdGV4dGFyZWEgPSBkb2N1bWVudC5nZXRFbGVtZW50QnlJZChpZCk7CgogIC8vIGVuaGFuY2VkIGNvZGUgZnJvbSBodHRwOi8vd3d3LmFsZXhraW5nLm9yZy9ibG9nLzIwMDMvMDYvMDIvaW5zZXJ0aW5nLWF0LXRoZS1jdXJzb3ItdXNpbmctamF2YXNjcmlwdC8gYW5kIE1lZGlhV2lraQogIGlmIChkb2N1bWVudC5zZWxlY3Rpb24pIHsKICAgIC8vIElFCiAgICB0ZXh0YXJlYS5mb2N1cygpOwogICAgc2VsID0gZG9jdW1lbnQuc2VsZWN0aW9uLmNyZWF0ZVJhbmdlKCk7CiAgICBzZWwudGV4dCA9IHRleHQ7CiAgfSBlbHNlIGlmICh0ZXh0YXJlYS5zZWxlY3Rpb25TdGFydCB8fCB0ZXh0YXJlYS5zZWxlY3Rpb25TdGFydCA9PSAwKSB7CiAgICAvLyBNb3ppbGxhCiAgICB2YXIgc3RhcnQgPSB0ZXh0YXJlYS5zZWxlY3Rpb25TdGFydDsKICAgIHZhciBlbmQgPSB0ZXh0YXJlYS5zZWxlY3Rpb25FbmQ7CiAgICB2YXIgc2Nyb2xsID0gdGV4dGFyZWEuc2Nyb2xsVG9wOwogICAgaSA9IHRleHQuaW5kZXhPZignJScpOwogICAgaWYgKGkgPiAtMSkgewogICAgICB0ZXh0ID0gdGV4dC5zdWJzdHJpbmcoMCwgaSkgKyB0ZXh0LnN1YnN0cmluZyhpICsgMSk7CiAgICB9CiAgICB0ZXh0YXJlYS52YWx1ZSA9IHRleHRhcmVhLnZhbHVlLnN1YnN0cmluZygwLCBzdGFydCkgKyB0ZXh0ICsgdGV4dGFyZWEudmFsdWUuc3Vic3RyaW5nKGVuZCk7CiAgICB0ZXh0YXJlYS5mb2N1cygpOwogICAgaWYgKGkgPiAtMSkgewogICAgICB0ZXh0YXJlYS5zZWxlY3Rpb25TdGFydCA9IHN0YXJ0ICsgaTsKICAgICAgdGV4dGFyZWEuc2VsZWN0aW9uRW5kID0gZW5kICsgaTsKICAgIH0gZWxzZSB7CiAgICAgIHRleHRhcmVhLnNlbGVjdGlvblN0YXJ0ID0gc3RhcnQgKyB0ZXh0Lmxlbmd0aDsKICAgICAgdGV4dGFyZWEuc2VsZWN0aW9uRW5kID0gZW5kICsgdGV4dC5sZW5ndGg7CiAgICB9CiAgICB0ZXh0YXJlYS5zY3JvbGxUb3AgPSBzY3JvbGw7CiAgfSBlbHNlIHsKICAgIC8vIG90aGVycwogICAgdGV4dGFyZWEudmFsdWUgKz0gdGV4dDsKICB9Cn0K</key>
 <key name="length">1374</key>
 <key name="last_modified">20060624T122458Z</key>
 <key name="message">miniWiki default</key>
 <key name="author">admin</key>
 <key name="revision">1</key>
-<key name="name">mw/functions.js</key>
+<key name="name">mw/layout/functions.js</key>
 </resource>
 </resources>
